# imprisoned_souls

./: .gitignore  ProjectR.csproj.old  ProjectR.csproj.old.1  ProjectR.sln  README.md  audio_product.gd  audio_product.gd.uid  blood_particle.gd  blood_particle_information.gd  blood_particle_information.gd.uid  blood_splatter.gd  canvas_screen_pointer.gd  canvas_screen_pointer.gd.uid  character.gd  character.gd.uid  class_selection_ui_scene.tscn  classing_particle_2d.gd  classing_particle_2d.gd.uid  collide_info.gd  collide_info.gd.uid  debug_Scene.tscn  debug_scene.tscn  default_bus_layout.tres  demo_physics_particle_2d.tscn  eead_2d.gd  eead_2d.gd.uid  endeka.gd  endeka.gd.uid  endeka_sorter.gd  endeka_sorter.gd.uid  enemy.gd  enemy.tscn  event_handler.gd  event_handler.gd.uid  game_item.gd.uid  glass_2d.gd  glass_2d.gd.uid  gradient_progress_2d.gd  gradient_progress_2d.gd.uid  hit_particle.gd  (+85 more)
aether_2d/: Aether2dDemo.cs  Aether2dDemo.cs.uid  aether_2d_demo.tscn  test.tscn  test_cs.cs  test_cs.cs.uid
analog_crashed_screen/: color_generate.tres  color_generate_test_screen.gd  color_generate_test_screen.gd.uid  demo.tscn  eead_2d.gd  eead_2d.gd.uid  grain_and_noise.gdshader  (+4 more)
audio/: sound.gd  (+9 more)
rust_script/ibproject/: Cargo.toml
rust_script/ibproject/endeka_renderer/: Cargo.toml
rust_script/ibproject/endeka_renderer/src/: lib.rs
rust_script/ibproject/src/: lib.rs
rust_script/ibproject/src/endeka/: mod.rs  r_endeka.rs
rust_script/ibproject/src/test/: bouncing_ball_box.rs  flow_field.rs  godot_see_me.rs  hangul.rs  mod.rs  r_endeka.rs  rodio.rs  training_room.rs
(+726 files in other folders)
