[package]
name = "ibproject" # Part of dynamic library name; we use {YourCrate} placeholder.
version = "0.1.0"     # You can leave version and edition as-is for now.
edition = "2021"


[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.
proc-macro = true


[dependencies]
godot = "0.5.1"
oauth2 = "5.0.0"
tossicat = "0.8.0"
endeka_renderer = {path = "endeka_renderer"}